tests/checker/fail/map_set_not_implemented.can
counts = (Map) -> Map {
    Map.insert("k", 1)
}

main = () -> Unit {
    "done".print()
}
